# launchpad

./: .codespell-ignore  .eslintignore  .git-blame-ignore-revs  .gitignore  .launchpad.yaml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README  SECURITY.md  _pythonpath.py  constraints.txt  eslint.config.js  lpdev-image-file.yaml  ols-vms.conf  pyproject.toml  setup-requirements.txt  setup.cfg  setup.py  standard_template.py  standard_test_template.html  standard_test_template.js  system-packages.txt  test_on_merge.py  tox.ini  versions.cfg
brzplugins/: builder  difftacular  loom
brzplugins/lpserve/: __init__.py  test_lpserve.py
bzrplugins/lpserve/: __init__.py  test_lpserve.py
charm/: .gitignore  Makefile  bundle.yaml.in  dependencies.txt  packages.txt
charm/launchpad-admin/: README.md  actions.yaml  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-appserver/: README.md  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-assets/: README.md  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-buildd-manager/: README.md  actions.yaml  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-codehosting/: README.md  actions.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-copy-archive-publisher/: README.md  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-cron-control/: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml
charm/launchpad-db-update/: README.md  actions.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-debian-importer/: README.md  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-frontend-extras/: README.md  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-ftpmaster-publisher/: README.md  charmcraft.yaml  config.yaml  layer.yaml  metadata.yaml
charm/launchpad-ftpmaster-uploader/: README.md  charmcraft.yaml  config.yaml  layer.yaml  (+1 more)
configs/: README.rst  README.txt
cronscripts/: allocate-revision-karma.py  buildd-retry-depwait.py  check-teamparticipation.py  checkwatches.py  code-import-dispatcher.py  daily_product_jobs.py  distributionmirror-prober.py  expire-archive-files.py  expire-bugtasks.py  expire-questions.py  flag-expired-memberships.py  foaf-update-karma-cache.py  garbo-daily.py  garbo-frequently.py  garbo-hourly.py  generate-contents-files.py  generate-ppa-htaccess.py  language-pack-exporter.py  librarian-feed-swift.py  librarian-gc.py  nightly.sh  parse-librarian-apache-access-logs.py  parse-ppa-apache-access-logs.py  ppa-generate-keys.py  ppa-update-keys.py  process-hwdb-submissions.py  process-job-source-groups.py  process-job-source.py  process-mail.py  product-release-finder.py  publish-ftpmaster.py  repack_git_repositories.py  reprocess-hwdb-submissions.py  request_daily_builds.py  request_git_repack.py  rosetta-approve-imports.py  rosetta-export-queue.py  rosetta-pofile-stats.py  rosetta-poimport.py  send-bug-notifications.py  (+12 more)
daemons/: buildd-manager.tac  distributionmirror_http_server.tac  librarian.tac  numbercruncher.tac  sftp.tac
doc/: Makefile  README  chameleon.txt  conf.py  email.txt  faq.rst  index.rst  malone.rst  overview.rst  pip.txt  running-details.rst  running.rst  scope.rst  security.rst  strategy.rst  values.rst  webapp-process.txt
lib/: lp_sitecustomize.py  zcml
requirements/: docs.txt  launchpad.txt  setup.txt  types.txt  ztk-versions.cfg
scripts/: add-missing-builds.py  branch-rewrite.py  bug-export.py  bug-import.py  bugsummary-rebuild.py  cache-country-mirrors.py  close-account.py  code-import-worker-monitor.py  code-import-worker.py  convert-person-to-team.py  copy-distroseries-translations.py  copy-signingkeys.py  create-bot-account.py  debbugs-sync  fix-translations-opening.py  generate-access-token.py  get-stacked-on-branches.py  gina.py  import-debian-bugs.py  inject-extra-gpg-signing-key.py  librarian-report.py  list-team-members  memcached-stats.py  migrate-librarian-content-md5.py  mirror-branch.py  mlist-import.py  mlist-sync.py  modified-branches.py  populate-archive.py  populate-distroseriesdiff.py  ppa-report.py  process-accepted.py  process-death-row.py  process-one-mail.py  process-upload.py  publish-distro.py  script-monitor-nagios.py  script-monitor.py  start-loggerhead.py  stop-loggerhead.py  (+10 more)
sourcecode/: .gitignore  Makefile
utilities/: anoint-team-member  audit-security-settings.py  build-tarball  community-contributions.py  create-lp-wadl-and-apidoc.py  find-changed-files.sh  findimports.py  format-imports  format-new-and-modified-imports  generate-external-bug-status-docs  get-branch-info  js-deps  launchpad-database-setup  link-external-sourcecode  link-system-packages.py  lint  list-pages  local-latency  lsconf.py  make-dev-certificate  make-dummy-hosted-branches  make-lp-user  make-requirements.py  manage-celery-workers.sh  massage-bug-import-xml  mock-code-import  paste  pgbackup.py  pgcreate.py  pgkillactive.py  pgkillidle.py  pglogwatch.py  pgmassacre.py  pgoptions.py  pgstats.py  publish-to-swift  python_standard_libs.py  relocate-virtualenv  rename-module.py  report-database-stats.py  (+14 more)
yarn/: package.json
zcml/: README  ftesting.zcml  librarian.zcml  script-testing.zcml  script.zcml  summarizerequests.zcml  webapp.zcml  zopeapp.zcml
(+5777 files in other folders)
