[metadata]
name = lp
version = 2.2.3
description = A unique collaboration and Bazaar code hosting platform for software projects.
url = https://launchpad.net/
maintainer = Launchpad Developers
license = Affero GPL v3
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python

[options]
packages = find:
# This list should only contain direct dependencies - things imported or
# used in ZCML.
install_requires =
    ampoule
    beautifulsoup4[lxml]
    bleach
    bleach-allowlist
    boto3
    breezy
    brz-builder
    brz-loom
    celery
    cssutils
    defusedxml
    difftacular
    distro
    dkimpy[ed25519]
    dohq-artifactory
    feedparser
    fixtures
    geoip2
    gunicorn
    importlib-resources; python_version < "3.7"
    ipython
    jsautobuild
    kombu
    launchpad-buildd
    launchpadlib
    lazr.batchnavigator
    lazr.config
    lazr.delegates
    lazr.enum
    lazr.jobrunner
    lazr.lifecycle
    lazr.restful
    lazr.sshserver
    lazr.uri
    loggerhead[proxied]
    lpjsmin
    lxml[cssselect]
    Markdown
    meliae
    multipart
    oauth
    oauthlib
    oops
    oops_amqp
    # Not directly used by Launchpad, but useful in production deployments.
    oops_datedir2amqp
    oops_datedir_repo
    oops_timeline
    oops_twisted
    oops_wsgi
    packaging
    paramiko
    pkginfo
    psutil
    pgbouncer
    psycopg2
    pyasn1
    pygettextpo
    pygpgme
    pymacaroons
    pymemcache
    pyparsing
    pystache
    python-dateutil
    python-debian
    python-keystoneclient
    python-openid2
    python-subunit
    python-swiftclient
    PyYAML
    rabbitfixture
    requests
    requests-file
    requests-toolbelt
    responses
    secure-cookie
    selenium
    setproctitle
    setuptools
    six
    soupmatchers
    Sphinx
    statsd
    storm
    talisker[gunicorn]
    tenacity
    testscenarios
    testtools
    timeline
    transaction
    treq
    Twisted[conch,tls]
    txfixtures
    txpkgupload
    typing-extensions
    virtualenv-tools3
    wadllib
    WebOb
    WebTest
    Werkzeug
    wheel-filename
    WSGIProxy2
    z3c.ptcompat
    zope.app.http
    zope.app.publication
    zope.app.publisher
    zope.authentication
    zope.browser
    zope.browsermenu
    zope.browserpage
    zope.browserresource
    zope.component[zcml]
    zope.configuration
    zope.contenttype
    zope.datetime
    zope.error
    zope.event
    zope.exceptions
    zope.formlib
    zope.i18n
    zope.i18nmessageid
    zope.interface
    zope.lifecycleevent
    zope.location
    zope.login
    zope.pagetemplate
    zope.principalregistry
    zope.processlifetime
    zope.proxy
    zope.publisher
    zope.schema
    zope.security
    zope.sendmail
    zope.tal
    zope.tales
    zope.testbrowser
    zope.testing
    zope.testrunner[subunit]
    zope.traversing
    zope.vocabularyregistry
    zstandard
include_package_data = True
package_dir = =lib
zip_safe = False

[options.packages.find]
where = lib

[options.entry_points]
console_scripts =
    bingtestservice = lp.services.sitesearch.bingtestservice:main
    build-twisted-plugin-cache = lp.services.twistedsupport.plugincache:main
    generate-key-pair = lp.services.crypto.scripts.generatekeypair:main
    harness = lp.scripts.harness:python
    iharness = lp.scripts.harness:ipython
    ipy = IPython.frontend.terminal.ipapp:launch_new_instance
    jsbuild = lp.scripts.utilities.js.jsbuild:main
    kill-test-services = lp.scripts.utilities.killtestservices:main
    killservice = lp.scripts.utilities.killservice:main
    retest = lp.testing.utilities.retest:main
    run = lp.scripts.runlaunchpad:start_launchpad
    run-testapp = lp.scripts.runlaunchpad:start_testapp
    sprite-util = lp.scripts.utilities.spriteutil:main
    start_librarian = lp.scripts.runlaunchpad:start_librarian
    test = lp.scripts.utilities.test:main
    twistd = twisted.scripts.twistd:run
    version-info = lp.scripts.utilities.versioninfo:main
    watch_jsbuild = lp.scripts.utilities.js.watchjsbuild:main
    with-xvfb = lp.scripts.utilities.withxvfb:main

[flake8]
exclude =
    # Code here is imported from elsewhere and may not necessarily conform
    # to Launchpad's style.
    lib/contrib
ignore =
    # Incompatible with Black.
    E203,
    # ==/!= comparisons with True/False/None are common idioms with Storm.
    E711,
    E712,
    # It's not obvious that forbidding assigning lambdas makes the affected
    # code much clearer.
    E731,
    # Don't enforce either position of line breaks relative to binary
    # operators, at least for now.
    W503,
    W504
enable-extensions = B1
warn-symbols =
    # It's OK to override these warnings in the case of isinstance checks.
    storm.base.Storm = Inherit from lp.services.database.stormbase.StormBase instead.
    storm.locals.Storm = Inherit from lp.services.database.stormbase.StormBase instead.

[isort]
# database/* have some implicit relative imports.
known_first_party = canonical,lp,launchpad_loggerhead,fti,replication,preflight,security,upgrade,dbcontroller
known_pythonpath = _pythonpath
line_length = 79
sections = FUTURE,PYTHONPATH,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
